# outside

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md
src/tui/: location_manager.rs
