[package]
name = "outside"
version = "0.5.0"
edition = "2021"
authors = ["BaconIsAVeg <baconisaveg@fastmail.ca>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A multi-purpose weather client for your terminal"
homepage = "https://github.com/BaconIsAVeg/outside"
repository = "https://github.com/BaconIsAVeg/outside"
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = { version = "3.0", default-features = false, features = ["macros"] }

clap = { version = "4.2", features = ["derive"] }
cli-settings-derive = "0.3"
anyhow = "1.0"

url = "2.5.4"
chrono = "0.4.41"

dirs-next = "2.0.0"
savefile = "0.19"
savefile-derive = "0.19"
tinytemplate = "1.2.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "time", "signal", "macros"] }
cursive = "0.21"
stringcase = "0.4"
termsize = "0.1.9"

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
